src/objects/Program_Activity__c.object
<CustomObject>
    <fields>
        <fullName>Activity_Date__c</fullName>
        <label>Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Activity_Name__c</fullName>
        <label>Activity Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Objective__c</fullName>
        <label>Activity Objective</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Type__c</fullName>
        <label>Activity Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>1:1 Visit</fullName>
                </value>
                <value>
                    <fullName>Call</fullName>
                </value>
                <value>
                    <fullName>Follow-up</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Budget_Consumption__c</fullName>
        <label>Budget Consumption</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Journey_Phase__c</fullName>
        <label>Customer Journey Phase</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Harvest</fullName>
                </value>
                <value>
                    <fullName>Post-Harvest</fullName>
                </value>
                <value>
                    <fullName>Planning</fullName>
                </value>
                <value>
                    <fullName>Purchasing</fullName>
                </value>
                <value>
                    <fullName>Pre-Planting</fullName>
                </value>
                <value>
                    <fullName>Planting</fullName>
                </value>
                <value>
                    <fullName>Growing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phase__c</fullName>
        <label>Phase</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Growing</fullName>
                </value>
                <value>
                    <fullName>Harvest</fullName>
                </value>
                <value>
                    <fullName>Pre-Planning</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program_SFID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Program Activities (Program)</relationshipLabel>
        <relationshipName>Program_Activities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>Not Scheduled</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Touchpoint_Type__c</fullName>
        <label>Touchpoint Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1:1 Visit</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>E-Mail</fullName>
                </value>
                <value>
                    <fullName>Call</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Program Activity</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Activity_Name__c</columns>
        <columns>Activity_Type__c</columns>
        <columns>Touchpoint_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Program_SFID__c</columns>
        <columns>Customer_Journey_Phase__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Program Activity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Program Activities</pluralLabel>
    <recordTypes>
        <fullName>Non_Program_Activities</fullName>
        <active>true</active>
        <label>Non Program Activities</label>
    </recordTypes>
    <recordTypes>
        <fullName>Program_Activity</fullName>
        <active>true</active>
        <label>Program Activity</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>